# flytbase_assignment

./: app1_square.cpp  app2_triangle.cpp
app1/: CMakeLists.txt  Readme
app2/: CMakeLists.txt  Readme
